--- a/recipe/recipe.html
+++ b/recipe/recipe.html
@@ -23,7 +23,7 @@
   <h2>Vegetarian Recipes</h2>
   
   <div class="recipe-card">
-    <img src=https://tse4.mm.bing.net/th?id=OIP.6MJSBC3l9FAFpYmTPnUGDQHaGP&pid=Api&P=0&h=180 alt="veg Recipe 1">
+    <img src="https://tse4.mm.bing.net/th?id=OIP.6MJSBC3l9FAFpYmTPnUGDQHaGP&pid=Api&P=0&h=180" alt="veg Recipe 1">
     <h3>Veg biryani</h3>
    
     <a href="#">View Recipe</a>
